--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "diff-notes",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.1.1",
+  "description": "A truly minimal annotation tool with integrated differentiation and merge functionality",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
